--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -8,11 +8,27 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myRecyclerView_Citas"
-        android:layout_width="409dp"
-        android:layout_height="590dp"
+        android:layout_width="412dp"
+        android:layout_height="448dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.574" />
+
+    <Button
+        android:id="@+id/button_Nuevo"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/boton_nuevo"
+        android:textAlignment="gravity"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myRecyclerView_Citas"
+        app:layout_constraintVertical_bias="0.741" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
