--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,8 @@
         android:fitsSystemWindows="true"
         android:background="@color/brown_50"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:itemIconTint="@color/brown_900"
+        app:itemTextColor="@color/brown_900"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
