--- a/app/src/main/res/layout/citas_card.xml
+++ b/app/src/main/res/layout/citas_card.xml
@@ -41,15 +41,15 @@
 
             <TextView
                 android:id="@+id/TextView_horaCita"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="192dp"
-                android:layout_toEndOf="@+id/TextView_especialistaCita"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="160dp"
+                android:layout_toEndOf="@+id/TextView_fechaCita"
                 android:text="08:15" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
