--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,12 +9,20 @@
         android:id="@+id/nav_citas"
         android:name="es.studium.healthm8.ui.citas.CitasFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_citas" />
+        tools:layout="@layout/fragment_citas" >
+        <action
+            android:id="@+id/action_nav_citas_to_nav_medicamentos"
+            app:destination="@id/nav_medicamentos" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_medicamentos"
         android:name="es.studium.healthm8.ui.medicamentos.MedicamentosFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_medicamentos" />
+        tools:layout="@layout/fragment_medicamentos" >
+        <action
+            android:id="@+id/action_nav_medicamentos_to_nav_citas"
+            app:destination="@id/nav_citas" />
+    </fragment>
 
 </navigation>
