--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="teal_200">#80CBC4</color>
     <color name="teal_50">#E0F2F1</color>
     <color name="grey_300">#E0E0E0</color>
+    <color name="brown_900">#3E2723</color>
     <color name="brown_100">#D7CCC8</color>
     <color name="brown_502">#E0D1C9</color>
     <color name="brown_50">#EFEBE9</color>
