--- a/app/src/main/res/layout/dialogo_nueva_cita.xml
+++ b/app/src/main/res/layout/dialogo_nueva_cita.xml
@@ -63,31 +63,26 @@
         app:layout_constraintStart_toStartOf="@+id/editTextLugar"
         app:layout_constraintTop_toBottomOf="@+id/editTextLugar" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="229dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="9dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNombreMedico"
-        app:layout_constraintStart_toStartOf="@+id/editTextNombreMedico"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNombreMedico">
+    <CheckBox
+        android:id="@+id/checkBox_esOnline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:text="@string/esOnline"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNombreMedico"
+        app:layout_constraintVertical_bias="0.047" />
 
-        <RadioButton
-            android:id="@+id/radioButtonEsOnline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/esOnline"
-            tools:layout_editor_absoluteX="240dp"
-            tools:layout_editor_absoluteY="341dp" />
-
-        <RadioButton
-            android:id="@+id/radioButtonEsTelefonica"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/esTelefonica"
-            tools:layout_editor_absoluteX="59dp"
-            tools:layout_editor_absoluteY="340dp" />
-    </RadioGroup>
+    <CheckBox
+        android:id="@+id/checkBox_esTelefonica"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="64dp"
+        android:text="@string/esTelefonica"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBox_esOnline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/checkBox_esOnline"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
