--- a/app/src/main/res/layout/citas_card.xml
+++ b/app/src/main/res/layout/citas_card.xml
@@ -7,6 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="86dp"
+        card_view:cardBackgroundColor="@color/blue"
         card_view:cardCornerRadius="6dp"
         card_view:cardElevation="4dp"
         card_view:cardUseCompatPadding="true">
@@ -17,6 +18,7 @@
 
             <TextView
                 android:id="@+id/TextView_fechaCita"
+                style="@style/CardViewTextHighStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -29,6 +31,7 @@
 
             <TextView
                 android:id="@+id/TextView_especialistaCita"
+                style="@style/CardViewTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -41,6 +44,7 @@
 
             <TextView
                 android:id="@+id/TextView_horaCita"
+                style="@style/CardViewTextStyle"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
