--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background"
+    android:background="@drawable/fondo_login2"
     tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/editTextUsuario"
+        style="@style/LoginTextStyle"
         android:layout_width="353dp"
         android:layout_height="48dp"
         android:ems="10"
@@ -23,6 +24,7 @@
 
     <EditText
         android:id="@+id/editTextPassword"
+        style="@style/LoginTextStyle"
         android:layout_width="353dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
@@ -36,32 +38,36 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="158dp"
-        android:layout_height="155dp"
+        android:layout_width="193dp"
+        android:layout_height="121dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextUsuario"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.487"
-        app:srcCompat="@drawable/round_login_24" />
+        app:layout_constraintVertical_bias="0.777"
+        app:srcCompat="@drawable/login_icon" />
 
     <Switch
         android:id="@+id/switch_guardar"
+        style="@style/LoginTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:minHeight="48dp"
         android:text="@string/texto_credenciales"
+        android:thumbTint="@drawable/switch_thumb_selector"
+        android:trackTint="@drawable/switch_track_selector"
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
         app:layout_constraintStart_toStartOf="@+id/editTextPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
     <Button
         android:id="@+id/button_acceder"
+        style="@style/RoundedButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button"
         android:text="@string/boton_acceder"
         app:layout_constraintBottom_toBottomOf="@+id/button_registrarse"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,10 +78,12 @@
 
     <Button
         android:id="@+id/button_registrarse"
+        style="@style/RoundedButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="44dp"
+        android:background="@drawable/rounded_button"
         android:text="@string/boton_regristrarse"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
