--- a/app/src/main/res/layout/medicamentos_card.xml
+++ b/app/src/main/res/layout/medicamentos_card.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="130dp"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="130dp"
         card_view:cardBackgroundColor="@color/blue"
         card_view:cardCornerRadius="6dp"
         card_view:cardElevation="4dp"
@@ -13,7 +13,7 @@
 
         <RelativeLayout
             android:layout_width="397dp"
-            android:layout_height="76dp">
+            android:layout_height="130dp">
 
             <TextView
                 android:id="@+id/nombreMedicamento"
@@ -22,9 +22,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="50dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="45dp"
                 android:text="Pastilla Tesión"
                 android:textSize="16sp" />
 
@@ -39,6 +39,14 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="40dp"
                 android:text="1 pastilla" />
+
+            <ImageView
+                android:id="@+id/imageView_Construccion"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="200dp"
+                android:layout_marginTop="5dp"
+                card_view:srcCompat="@drawable/enconstruccion" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
